--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
-    "d3": "^4.2.1",
+    "d3": "^3.0",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "jquery": "^3.1.0",
     "mongodb": "~2.2.4",
     "mongoose": "^4.5.7",
     "morgan": "~1.7.0",
