--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3": "^3.0",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "highcharts": "^5.0.0",
     "jade": "~1.11.0",
     "jquery": "^3.1.0",
     "mongodb": "~2.2.4",
